PROJECT(lcms)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
INCLUDE(dist.cmake)

INCLUDE_DIRECTORIES (include)

# LCMS Library
FILE(GLOB LCMS_SRCS "src/*.c" "src/*.def")
ADD_LIBRARY(lcms SHARED ${LCMS_SRCS})

# install
INSTALL(TARGETS lcms DESTINATION ${INSTALL_LIB})
INSTALL(FILES include/icc34.h include/lcms.h DESTINATION ${INSTALL_INC})
INSTALL(DIRECTORY doc DESTINATION ${INSTALL_DOC})
INSTALL(FILES AUTHORS COPYING ChangeLog NEWS README.1ST DESTINATION ${INSTALL_DOC})


